# O-CIMKit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  device_benchmark_report_nonvolatile.md  device_benchmark_report_volatile.md  main.py  pyproject.toml  requirements.txt  run_tests.py  split_main.py  top_journal_benchmark_report.md
.github/workflows/: ci.yml  tests.yml
applications/bearing_fault/: README.md  dataset.py  model.py  train.py
applications/biohybrid_spiking/: dataset.py  model.py  train.py
applications/chaotic_lorenz/: README.md  dataset.py  model.py  train.py
applications/cifar10_vision/: README.md  dataset.py  model.py  train.py
applications/cim_nano_gpt/: README.md  model.py  train.py
applications/digit_rec/: README.md  dataset.py  model.py  train.py
applications/dvs_gesture/: train.py
applications/ecg_cardio/: README.md  dataset.py  model.py  train.py
cli/: benchmark.py  codesign.py  diagnostics.py  main.py  run.py
core/: __init__.py  autotune.py  compiler.py  layers.py  physics.py  profiler.py  quantization.py
profiles/: __init__.py  device_profile.py  fitter.py  parser.py
reports/: device_diagnostics_report.md  generative_aigc_report.md  top_journal_benchmark_report.md
scripts/: architectural_profiler.py  autotune_demo.py  download_datasets.py  engineering_audit.py  evaluate_reliability.py  generate_mock_device_data.py  plot_benchmark.py  quality_gate.py  run_top_journal_benchmark.py  verify_codesign_selfhealing.py
tests/: test_autotune.py  test_compiler.py  test_generative_aigc.py  test_layers.py  test_quantization.py
(+78 files in other folders)
