[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "o-cimkit"
version = "1.0.0"
authors = [
    { name = "Leslie360 & Antigravity" }
]
description = "A unified, hardware-aware simulation framework and neuromorphic computing evaluation platform for organic optoelectronic memory devices."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "torch>=2.0.0",
    "torchvision",
    "scikit-learn>=1.0",
    "wfdb>=4.0",
    "librosa>=0.9",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "pandas>=1.3",
    "scipy>=1.7",
    "openpyxl>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/Leslie360/CIM_application_project"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "profiles*", "applications*", "cli*"]

[project.scripts]
o-cimkit = "cli.main:main"
cim-sim = "cli.main:main"
